<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>ch.ethz.idsc</groupId>
	<artifactId>amodeus</artifactId>
	<version>1.9.3</version>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<skipTests>false</skipTests>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<github.global.server>github</github.global.server>
		<matsim.version>12.0-2020w15-SNAPSHOT</matsim.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.matsim</groupId>
			<artifactId>matsim</artifactId>
			<version>${matsim.version}</version>
		</dependency>
		<dependency>
			<groupId>org.matsim.contrib</groupId>
			<artifactId>dvrp</artifactId>
			<version>${matsim.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.ethz.idsc</groupId>
			<artifactId>tensor</artifactId>
			<version>0.8.1</version>
		</dependency>
		<dependency>
			<groupId>de.lmu.ifi.dbs.elki</groupId>
			<artifactId>elki</artifactId>
			<version>0.7.1</version>
		</dependency>
		<dependency>
			<groupId>de.xypron.linopt</groupId>
			<artifactId>linopt</artifactId>
			<version>1.10</version>
		</dependency>
		<dependency><!-- necessary to test scenarioPreparer -->
			<groupId>org.gnu.glpk</groupId>
			<artifactId>glpk-java</artifactId>
			<version>1.12.0</version>
		</dependency>
		<dependency>
			<groupId>io.humble</groupId>
			<artifactId>humble-video-all</artifactId>
			<version>0.2.1</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>
	</dependencies>

	<repositories>
		<repository>
			<id>tensor-mvn-repo</id>
			<url>https://raw.github.com/idsc-frazzoli/tensor/mvn-repo/</url>
		</repository>
		<repository>
			<id>XypronRelease</id>
			<name>Xypron Release</name>
			<url>http://rsync.xypron.de/repository</url>
			<layout>default</layout>
		</repository>
		<repository>
			<id>osgeo</id>
			<name>Geotools repository</name>
			<url>https://repo.osgeo.org/repository/release/</url>
		</repository>
		<repository>
			<id>matsim-snapshot</id>
			<url>https://oss.jfrog.org/libs-snapshot</url>
		</repository>
	</repositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.4</version>
				<configuration>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.1</version>
				<configuration>
					<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.github.github</groupId>
				<artifactId>site-maven-plugin</artifactId>
				<version>0.11</version>
				<configuration>
					<message>Maven artifacts for ${project.version}</message>
					<noJekyll>true</noJekyll>
					<outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
					<branch>refs/heads/mvn-repo</branch>
					<merge>true</merge>
					<includes>
						<include>**/*</include>
					</includes>
					<repositoryName>amodeus</repositoryName>
					<repositoryOwner>idsc-frazzoli</repositoryOwner>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>site</goal>
						</goals>
						<phase>deploy</phase>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>